Minimal settings GUI and config updates
The settings GUI is 'working', but need to add more features
such as enabling automatic backups. Does warn if tries to enable
options or backup if NOT root, as must be root to get full
system backup with rsync.

Must figure out issue that appear in rsync test; not sure what is
Also, come up with regex for better progress parsing

--- a/pyBackup/config.json
+++ b/pyBackup/config.json
@@ -1,18 +1,20 @@
 {
-	"exclude":[
-		"/boot/", 
-		"/dev/", 
-		"/media/", 
-		"/proc/", 
-		"/srv/", 
-		"/sys/", 
-		"/tmp/", 
-		"/var/"
-	],
-	"user_exclude":[],
-	"last_backup":"",
-	"days_since_last_backup":0,
-	"backup_size":0,
-	"backup_dir":"",
-	"drive_size":0
+    "exclude": [
+        "/boot/",
+        "/dev/",
+        "/media/",
+        "/proc/",
+        "/srv/",
+        "/sys/",
+        "/tmp/",
+        "/var/"
+    ],
+    "user_exclude": [],
+    "last_backup": "",
+    "days_since_last_backup": 0,
+    "backup_size": 0,
+    "backup_dir": "Backups.backupsdb/kyleadmin-MacBookPro",
+    "disk_size": 1771103873433,
+    "disk_UUID": "82ed9c87-3475-4319-a050-dbca26409681",
+    "dateFMT": "%Y-%V-%m-%d-%H%M%S"
 }
