--- a/pyBackup/config.json
+++ b/pyBackup/config.json
@@ -11,9 +11,9 @@
         "lost+found/"
     ],
     "user_exclude": [],
-    "last_backup": "2019-02-23T19_26_47",
+    "last_backup": "",
     "days_since_last_backup": 0,
-    "backup_size": 5056893730,
+    "backup_size": 0,
     "backup_dir": "Backups.backupsdb/kyleadmin-MacBookPro",
     "disk_size": 1771103873433,
     "disk_UUID": "82ed9c87-3475-4319-a050-dbca26409681",
