Includes package data

--- a/pyBackup/config.json
+++ b/pyBackup/config.json
@@ -1,24 +1,24 @@
 {
-    "exclude": [
-        "/boot/",
-        "/dev/",
-        "/media/",
-        "/proc/",
-        "/srv/",
-        "/sys/",
-        "/tmp/",
-        "/var/",
+	"exclude":[
+		"/boot/", 
+		"/dev/", 
+		"/media/", 
+		"/proc/", 
+		"/srv/", 
+		"/sys/", 
+		"/tmp/", 
+		"/var/",
         "lost+found/"
-    ],
-    "user_exclude": [],
-    "last_backup": "",
-    "days_since_last_backup": 0,
-    "backup_size": 0,
-    "backup_dir": "Backups.backupsdb/kyleadmin-MacBookPro",
-    "disk_size": 1771103873433,
-    "disk_UUID": "82ed9c87-3475-4319-a050-dbca26409681",
+	],
+	"user_exclude":[],
+	"last_backup":"",
+	"days_since_last_backup":0,
+	"backup_size":0,
+	"backup_dir":"Backups.backupsdb",
+	"disk_size":0,
+	"disk_UUID":"",
     "date_FMT": "%Y-%m-%dT%H_%M_%S",
-    "auto_backup": false,
-    "cron_cmd": "pyBackup_cron",
-    "cron_cmt": "Cron job for hourly backups"
+	"auto_backup":false,
+	"cron_cmd":"pyBackup_cron",
+	"cron_cmt":"Cron job for hourly backups"
 }
