Uses updated config.json file

--- a/pyBackup/config.json
+++ b/pyBackup/config.json
@@ -19,6 +19,6 @@
 	"disk_UUID":"",
     "date_FMT": "%Y-%m-%dT%H_%M_%S",
 	"auto_backup":false,
-	"cron_cmd":"pyBackup_cron",
+	"cron_cmd":"rsyncBackup.py",
 	"cron_cmt":"Cron job for hourly backups"
 }
